// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariableSizeGrid onScroll scrolling should report partial items correctly in onItemsRendered 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 96,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 94,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 97,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 95,
      "visibleRowStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 97,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 95,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 98,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 96,
      "visibleRowStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 96,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 94,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 97,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 95,
      "visibleRowStopIndex": 99,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method scroll with align = "auto" should work with partially-visible items 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 7,
      "overscanColumnStopIndex": 11,
      "overscanRowStartIndex": 6,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 8,
      "visibleColumnStopIndex": 10,
      "visibleRowStartIndex": 7,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 96,
      "overscanColumnStopIndex": 99,
      "overscanRowStartIndex": 95,
      "overscanRowStopIndex": 99,
      "visibleColumnStartIndex": 97,
      "visibleColumnStopIndex": 99,
      "visibleRowStartIndex": 96,
      "visibleRowStopIndex": 99,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 3,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 2,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should not set invalid offsets when the list contains few items 1`] = `[Function]`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "auto" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "center" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 2,
      "overscanColumnStopIndex": 8,
      "overscanRowStartIndex": 2,
      "overscanRowStopIndex": 8,
      "visibleColumnStartIndex": 3,
      "visibleColumnStopIndex": 7,
      "visibleRowStartIndex": 3,
      "visibleRowStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 7,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 7,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 6,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 6,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 16,
      "overscanRowStopIndex": 19,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 17,
      "visibleRowStopIndex": 19,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "end" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 1,
      "overscanRowStopIndex": 6,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 2,
      "visibleRowStopIndex": 5,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 7,
      "overscanRowStopIndex": 11,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 8,
      "visibleRowStopIndex": 10,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "smart" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 5,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 1,
      "visibleRowStopIndex": 4,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 5,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 1,
      "visibleColumnStopIndex": 4,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 1,
      "overscanColumnStopIndex": 6,
      "overscanRowStartIndex": 2,
      "overscanRowStopIndex": 8,
      "visibleColumnStartIndex": 2,
      "visibleColumnStopIndex": 5,
      "visibleRowStartIndex": 3,
      "visibleRowStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 8,
      "overscanRowStopIndex": 12,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 9,
      "visibleRowStopIndex": 11,
    },
  ],
]
`;

exports[`VariableSizeGrid scrollToItem method should scroll to the correct item for align = "start" 1`] = `
Array [
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 0,
      "overscanRowStopIndex": 4,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 0,
      "visibleRowStopIndex": 3,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 4,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 4,
      "overscanRowStopIndex": 9,
      "visibleColumnStartIndex": 5,
      "visibleColumnStopIndex": 8,
      "visibleRowStartIndex": 5,
      "visibleRowStopIndex": 8,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 3,
      "overscanColumnStopIndex": 8,
      "overscanRowStartIndex": 3,
      "overscanRowStopIndex": 8,
      "visibleColumnStartIndex": 4,
      "visibleColumnStopIndex": 7,
      "visibleRowStartIndex": 4,
      "visibleRowStopIndex": 7,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 16,
      "overscanRowStopIndex": 19,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 17,
      "visibleRowStopIndex": 19,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 5,
      "overscanColumnStopIndex": 9,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 13,
      "visibleColumnStartIndex": 6,
      "visibleColumnStopIndex": 9,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 12,
    },
  ],
  Array [
    Object {
      "overscanColumnStartIndex": 0,
      "overscanColumnStopIndex": 4,
      "overscanRowStartIndex": 9,
      "overscanRowStopIndex": 13,
      "visibleColumnStartIndex": 0,
      "visibleColumnStopIndex": 3,
      "visibleRowStartIndex": 10,
      "visibleRowStopIndex": 12,
    },
  ],
]
`;
